src/objects/Play_History__c.object
<CustomObject>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist</label>
        <referenceTo>Artist__c</referenceTo>
        <relationshipLabel>Play History</relationshipLabel>
        <relationshipName>Play_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Song__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Song</label>
        <referenceTo>Song__c</referenceTo>
        <relationshipLabel>Play History</relationshipLabel>
        <relationshipName>Play_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Play History</relationshipLabel>
        <relationshipName>Play_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Play History</label>
    <nameField>
        <displayFormat>PH-{00000000}</displayFormat>
        <label>Play History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Play History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>